# Procedural

./: .gitignore  CMakeLists.txt  LICENSE  package.xml
configs/: mementar.yaml  ontologenius.yaml  overworld.yaml  overworld_pepper_bag.yaml  overworld_pepper_mocap_2_agent.yaml
include/procedural/: RosInterface.h
include/procedural/builder/: ActionBuilder.h  HTNBuilder.h
include/procedural/core/: Action.h  ActionRecognition.h  Fact.h  FactPattern.h  Facts.h  TaskRecognition.h  WordTable.h
include/procedural/core/Graph/: HTNTransition.h  Network.h  NetworkTransition.h  State.h  StateMachine.h  Transition.h  TransitionAction.h  TransitionFact.h  TransitionNetwork.h  TransitionStateMachine.h  TransitionTask.h
include/procedural/core/Graph/HTN/: HtnState.h  HtnStateMachine.h
include/procedural/core/Graph/Transitions/: TransitionAction.h  TransitionActionMethod.h  TransitionFact.h  TransitionTask.h
include/procedural/core/Types/: Action.h  ActionDescription.h  ActionMethod.h  ActionType.h  Description.h  Fact.h  FactPattern.h  IncompleteNetwork.h  IncompleteStateMachine.h  Interface.h  Method.h  Methods.cpp  Methods.h  NetworkOutput.h  PatternFact.h  PatternNetworkTransition.h  PatternRecognition.h  PatternTransition.h  PatternTransitionFact.h  PatternTransitionNetwork.h  PatternTransitionStateMachine.h  ResultFeedProcess.h  SpecializedAction.h  StateMachineFinishedMSG_.h  StateMachineOutput.h  Task.h  TaskRecognizedMSG.h  Variable.h  WordTable.h
include/procedural/feeder/: Feeder.h
include/procedural/graph/: Action.h  Network.h  State.h  Transition.h
include/procedural/old/: RosInterface.h
include/procedural/old/builder/: ActionBuilder.h  HTNBuilder.h
include/procedural/old/core/: ActionRecognition.h  TaskRecognition.h
include/procedural/old/core/Graph/: State.h  StateMachine.h
include/procedural/old/core/Types/: Action.h  ActionDescription.h  Description.h  Fact.h  HTNTransition.h  IncompleteStateMachine.h  Method.h  (+8 more)
include/procedural/old/feeder/: Feeder.h
include/procedural/old/reader/: DomainReader.h  HATPListener.h  YamlReader.h
include/procedural/old/utils/: BufferFacts.h  Parameters.h  TimeStamp.h
include/procedural/reader/: ActionBuilder.h  DomainReader.h  HATPListener.h  YamlReader.h
include/procedural/reader/domainTypes/: ParsedHTN.h
include/procedural/reader/grammar/: HATPLexer.g4  htn.g4
include/procedural/reader/types/: ParsedComposedAction.h  ParsedDescription.h  ParsedFacts.h  ParsedParameters.h  ParsedPattern.h  ParsedRemap.h  ParsedSimpleAction.h
include/procedural/utils/: ActionRecognition.h  BufferFacts.h  Parameters.h  TimeStamp.h
launch/: ontologenius_mementar.launch  ontologenius_mementar_multi.launch  overworld.launch  overworld_bag.launch  overworld_bag_2_agent.launch  pepper_bag_publisher.launch  recognition.launch  recognition_kitchen.launch  recognition_multi.launch  recognition_multi_bag_pepper.launch  recognition_multi_bag_pepper_2_agent.launch  recognition_multi_kitchen.launch  test_action.launch
ontologies/: agents.owl  dt_humans.owl  kitchen_onto.owl  recognition.owl
scripts/: GraphOntoPublisher.py  GraphPublisher.py  GraphPublisher_old.py  GraphPublisherv2.py  __init__.py  actionPublisher.py  testPublisher.py  test_read_dot.py
scripts/graphPublisher/: __init__.py
scripts/graphPublisher/dataStructure/: Action.py  GraphTask.py  Sequences.py  __init__.py
scripts/graphPublisher/execution/: SequenceExecution.py
scripts/graphPublisher/reader/: GraphReader.py  SequencesReader.py  __init__.py
src/: RosInterface.cpp
src/builder/: ActionBuilder.cpp  HTNBuilder.cpp
src/core/: Action.cpp  ActionRecognition.cpp  Fact.cpp  FactPattern.cpp  Facts.cpp  TaskRecognition.cpp  WordTable.cpp
src/core/Graph/: HtnTransitionTask.cpp  Network.cpp  NetworkTransition.cpp  State.cpp  StateMachine.cpp  Transition.cpp  TransitionAction.cpp  TransitionFact.cpp  TransitionNetwork.cpp  TransitionStateMachine.cpp
src/core/Graph/HTN/: HtnState.cpp  HtnStateMachine.cpp
src/core/Graph/Transitions/: TransitionAction.cpp  TransitionActionMethod.cpp  TransitionFact.cpp  TransitionStateMachine.cpp  TransitionTask.cpp
src/core/Types/: Action.cpp  ActionMethod.cpp  ActionType.cpp  Fact.cpp  FactPattern.cpp  Method.cpp  PatternFact.cpp  PatternRecognition.cpp  SpecializedAction.cpp  Task.cpp  WordTable.cpp
src/feeder/: Feeder.cpp  exemple.yaml
src/graph/: Action.cpp  Network.cpp  State.cpp  Transition.cpp
src/nodes/: recognition.cpp  recognition_multi.cpp
src/old/: RosInterface.cpp
src/old/builder/: ActionBuilder.cpp  HTNBuilder.cpp
src/old/core/: ActionRecognition.cpp  TaskRecognition.cpp
src/old/core/Graph/: State.cpp  StateMachine.cpp
src/old/core/Types/: Action.cpp  Fact.cpp  Method.cpp  PatternFact.cpp  Task.cpp  WordTable.cpp
src/old/feeder/: Feeder.cpp
src/old/nodes/: recognition.cpp  recognition_multi.cpp
src/old/reader/: DomainReader.cpp  HATPListener.cpp  YamlReader.cpp  action_papier.yaml  exemple.yaml  exemple2.yaml
src/old/tests/: test_action.cpp  test_action2.cpp  test_feeder.cpp  test_task_recognition.cpp
src/old/tests/core/: test_facts.cpp  test_wordtable.cpp
src/old/tests/graph/: test_network.cpp
src/old/tests/kitchen_domain/: actions.yaml  publisher.yaml  task.dom
src/old/tests/reader/: domaine.dom  test_domain_builder.cpp  test_reader.cpp
src/old/utils/: BufferFacts.cpp
src/reader/: ActionBuilder.cpp  DomainReader.cpp  HATPListener.cpp  YamlReader.cpp  action_papier.yaml  exemple2.yaml  test.yaml  test_link_domain.yaml
src/tests/: test_action.cpp  test_action2.cpp  test_facts.cpp  test_feeder.cpp  test_task_recognition.cpp  test_wordtable.cpp
src/tests/core/: test_facts.cpp  test_facts.h  test_wordtable.cpp  test_wordtable.h
src/tests/graph/: test_network.cpp  test_network.h
src/tests/kitchen_domain/: actions.yaml  publisher.yaml  task.dom
src/tests/reader/: domaine_update.dom  domaine_update_action_type.dom  test_domain_builder.cpp  test_reader.cpp  test_reader.h
src/tests/test_builder/: actions.yaml  task.dom
src/utils/: ActionRecognition.cpp  BufferFacts.cpp
(+34 files in other folders)
